--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@sanity/block-content-to-react": "2.0.7",
     "classnames": "2.2.6",
     "date-fns": "2.10.0",
-    "next-sanity": "0.1.5",
     "next": "latest",
+    "next-sanity": "0.1.5",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react-social-icons": "^5.5.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
