--- a/studio/package.json
+++ b/studio/package.json
@@ -17,6 +17,7 @@
     "@sanity/base": "^2.10.5",
     "@sanity/components": "^2.2.6",
     "@sanity/core": "^2.10.5",
+    "@sanity/dashboard": "^2.10.5",
     "@sanity/default-layout": "^2.10.5",
     "@sanity/default-login": "^2.10.5",
     "@sanity/desk-tool": "^2.10.5",
@@ -24,7 +25,8 @@
     "@sanity/vision": "^2.10.5",
     "prop-types": "^15.7",
     "react": "^17.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "sanity-plugin-vercel-deploy": "^2.0.1"
   },
   "devDependencies": {}
 }
